// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServicesOverviewCard when API is still loading displays a loading indicator 1`] = `
<Provider
  value={
    Object {
      "fetchServices": [Function],
    }
  }
>
  <d>
    <Consumer>
      <ServicesOverviewCardImpl
        api={
          Object {
            "fetchServices": [Function],
          }
        }
      >
        <div
          className="card mb-3 mb-lg-0"
        >
          <CardHeader
            overviewSubtitle="Laden..."
          >
            <div
              className="card-header bg-light"
            >
              <div
                className="d-flex align-items-center"
              >
                <h5>
                  My Services Overview
                </h5>
              </div>
              <h6
                className="text-muted mb-0"
              >
                Laden...
              </h6>
            </div>
          </CardHeader>
          <div
            className="card-body"
          >
            <Spinner
              style="info"
            >
              <div
                className="spinner-border text-info"
              />
            </Spinner>
          </div>
        </div>
      </ServicesOverviewCardImpl>
    </Consumer>
  </d>
</Provider>
`;

exports[`ServicesOverviewCard when API returns an error displays the error 1`] = `
<Provider
  value={
    Object {
      "fetchServices": [Function],
    }
  }
>
  <d>
    <Consumer>
      <ServicesOverviewCardImpl
        api={
          Object {
            "fetchServices": [Function],
          }
        }
      >
        <div
          className="card mb-3 mb-lg-0"
        >
          <CardHeader
            overviewSubtitle="Fehler"
          >
            <div
              className="card-header bg-light"
            >
              <div
                className="d-flex align-items-center"
              >
                <h5>
                  My Services Overview
                </h5>
              </div>
              <h6
                className="text-muted mb-0"
              >
                Fehler
              </h6>
            </div>
          </CardHeader>
          <div
            className="card-body"
          >
            Konnte die Einsätze nicht laden (Not Found)
          </div>
        </div>
      </ServicesOverviewCardImpl>
    </Consumer>
  </d>
</Provider>
`;

exports[`ServicesOverviewCard when api returns services matches snapshot 1`] = `
<Provider
  value={
    Object {
      "fetchServices": [Function],
    }
  }
>
  <d>
    <Consumer>
      <ServicesOverviewCardImpl
        api={
          Object {
            "fetchServices": [Function],
          }
        }
      >
        <div
          className="card mb-3 mb-lg-0"
        >
          <CardHeader
            overviewSubtitle="1.1.2020 bis 29.2.2020"
          >
            <div
              className="card-header bg-light"
            >
              <div
                className="d-flex align-items-center"
              >
                <h5>
                  My Services Overview
                </h5>
              </div>
              <h6
                className="text-muted mb-0"
              >
                1.1.2020 bis 29.2.2020
              </h6>
            </div>
          </CardHeader>
          <div
            className="card-body services-overview-container"
          >
            <OverviewTable
              servicesList={
                ServicesList {
                  "earliestBeginning": "2020-01-05T23:00:00.000Z",
                  "latestEnding": "2020-02-06T23:00:00.000Z",
                  "monthlyGroupsCache": Array [
                    MonthlyGroup {
                      "month": "2019-12-31T23:00:00.000Z",
                    },
                    MonthlyGroup {
                      "month": "2020-01-31T23:00:00.000Z",
                    },
                  ],
                  "services": Array [
                    Object {
                      "beginning": "2020-01-06",
                      "civilServant": Object {
                        "fullName": "Peter Parker",
                      },
                      "definitive": true,
                      "ending": "2020-02-07",
                    },
                    Object {
                      "beginning": "2020-01-06",
                      "civilServant": Object {
                        "fullName": "Peter Parker",
                      },
                      "definitive": true,
                      "ending": "2020-02-07",
                    },
                  ],
                }
              }
            >
              <div
                className="d-flex"
              >
                <NamesList
                  servicesList={
                    ServicesList {
                      "earliestBeginning": "2020-01-05T23:00:00.000Z",
                      "latestEnding": "2020-02-06T23:00:00.000Z",
                      "monthlyGroupsCache": Array [
                        MonthlyGroup {
                          "month": "2019-12-31T23:00:00.000Z",
                        },
                        MonthlyGroup {
                          "month": "2020-01-31T23:00:00.000Z",
                        },
                      ],
                      "services": Array [
                        Object {
                          "beginning": "2020-01-06",
                          "civilServant": Object {
                            "fullName": "Peter Parker",
                          },
                          "definitive": true,
                          "ending": "2020-02-07",
                        },
                        Object {
                          "beginning": "2020-01-06",
                          "civilServant": Object {
                            "fullName": "Peter Parker",
                          },
                          "definitive": true,
                          "ending": "2020-02-07",
                        },
                      ],
                    }
                  }
                >
                  <div
                    className="names-list"
                  >
                    <div
                      className="name-row"
                    >
                      <span>
                        Peter Parker
                      </span>
                    </div>
                    <div
                      className="name-row"
                    >
                      <span>
                        Peter Parker
                      </span>
                    </div>
                  </div>
                </NamesList>
                <div
                  className="monthly-table-container"
                >
                  <h3
                    className="text-center month-title"
                  >
                    January
                  </h3>
                  <div
                    className="d-table services-overview-month-table"
                  >
                    <TableHeader
                      monthlyGroup={
                        MonthlyGroup {
                          "month": "2019-12-31T23:00:00.000Z",
                        }
                      }
                    >
                      <div
                        className="d-table-row"
                      >
                        <div
                          className="d-table-cell"
                        >
                          1
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          2
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          3
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          4
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          5
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          6
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          7
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          8
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          9
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          10
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          11
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          12
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          13
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          14
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          15
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          16
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          17
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          18
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          19
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          20
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          21
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          22
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          23
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          24
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          25
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          26
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          27
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          28
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          29
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          30
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          31
                        </div>
                      </div>
                    </TableHeader>
                    <TableContent
                      currentMonthlyGroup={
                        MonthlyGroup {
                          "month": "2019-12-31T23:00:00.000Z",
                        }
                      }
                      servicesList={
                        ServicesList {
                          "earliestBeginning": "2020-01-05T23:00:00.000Z",
                          "latestEnding": "2020-02-06T23:00:00.000Z",
                          "monthlyGroupsCache": Array [
                            MonthlyGroup {
                              "month": "2019-12-31T23:00:00.000Z",
                            },
                            MonthlyGroup {
                              "month": "2020-01-31T23:00:00.000Z",
                            },
                          ],
                          "services": Array [
                            Object {
                              "beginning": "2020-01-06",
                              "civilServant": Object {
                                "fullName": "Peter Parker",
                              },
                              "definitive": true,
                              "ending": "2020-02-07",
                            },
                            Object {
                              "beginning": "2020-01-06",
                              "civilServant": Object {
                                "fullName": "Peter Parker",
                              },
                              "definitive": true,
                              "ending": "2020-02-07",
                            },
                          ],
                        }
                      }
                    >
                      <div
                        className="d-table-row"
                      >
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                      </div>
                      <div
                        className="d-table-row"
                      >
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                      </div>
                    </TableContent>
                  </div>
                </div>
                <div
                  className="monthly-table-container"
                >
                  <h3
                    className="text-center month-title"
                  >
                    February
                  </h3>
                  <div
                    className="d-table services-overview-month-table"
                  >
                    <TableHeader
                      monthlyGroup={
                        MonthlyGroup {
                          "month": "2020-01-31T23:00:00.000Z",
                        }
                      }
                    >
                      <div
                        className="d-table-row"
                      >
                        <div
                          className="d-table-cell"
                        >
                          1
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          2
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          3
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          4
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          5
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          6
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          7
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          8
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          9
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          10
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          11
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          12
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          13
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          14
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          15
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          16
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          17
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          18
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          19
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          20
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          21
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          22
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          23
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          24
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          25
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          26
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          27
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          28
                        </div>
                        <div
                          className="d-table-cell"
                        >
                          29
                        </div>
                      </div>
                    </TableHeader>
                    <TableContent
                      currentMonthlyGroup={
                        MonthlyGroup {
                          "month": "2020-01-31T23:00:00.000Z",
                        }
                      }
                      servicesList={
                        ServicesList {
                          "earliestBeginning": "2020-01-05T23:00:00.000Z",
                          "latestEnding": "2020-02-06T23:00:00.000Z",
                          "monthlyGroupsCache": Array [
                            MonthlyGroup {
                              "month": "2019-12-31T23:00:00.000Z",
                            },
                            MonthlyGroup {
                              "month": "2020-01-31T23:00:00.000Z",
                            },
                          ],
                          "services": Array [
                            Object {
                              "beginning": "2020-01-06",
                              "civilServant": Object {
                                "fullName": "Peter Parker",
                              },
                              "definitive": true,
                              "ending": "2020-02-07",
                            },
                            Object {
                              "beginning": "2020-01-06",
                              "civilServant": Object {
                                "fullName": "Peter Parker",
                              },
                              "definitive": true,
                              "ending": "2020-02-07",
                            },
                          ],
                        }
                      }
                    >
                      <div
                        className="d-table-row"
                      >
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                      </div>
                      <div
                        className="d-table-row"
                      >
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell active definitive"
                        >
                          <i
                            className="fas fa-check"
                          />
                        </div>
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                        <div
                          className="d-table-cell day-cell inactive"
                        />
                      </div>
                    </TableContent>
                  </div>
                </div>
              </div>
            </OverviewTable>
          </div>
        </div>
      </ServicesOverviewCardImpl>
    </Consumer>
  </d>
</Provider>
`;
